Bug 199809 Memory leak in notification handler in nsMsgSendLater. r=Neil,sr=bienvenu